--- a/src/html/apre.html
+++ b/src/html/apre.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentações</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/darkmode.css">
+    <link rel="icon" href="../data/assets/img/image.png" type="image/x-icon">
+    <script defer src="../script/js/darmode-toggle.js"></script>
     <style>
         .apre-section {
             max-width: 600px;
