--- a/src/html/aulas.html
+++ b/src/html/aulas.html
@@ -214,7 +214,7 @@
                 <li>
                     <button type="button" class="ses-btn" data-session="sessao0">Sessão 0</button>
                     <ul class="aulas-list" id="sessao0" style="display:none;">
-                        <li><a href="#" data-video="../data/assets/videos/presentededomingochuvoso.mp4" data-title="Aula 1 - Presente de Domingo Chuvoso">Aula 1 - (Presente de Domingo Chuvoso)</a></li>
+                        <li><a href="#" data-video="https://www.youtube.com/watch?v=j6z3whNFumU" data-title="Aula 1 - Presente de Domingo Chuvoso">Aula 1 - (Presente de Domingo Chuvoso)</a></li>
                         <li><a href="#" data-video="#" data-title="Aula 2 - Em breve">Aula 2 - <span class="blue">(Em breve)</span></a></li>
                     </ul>
                 </li>
