--- a/src/html/livros.html
+++ b/src/html/livros.html
@@ -34,16 +34,21 @@
         .btn-voltar {
             margin-bottom: 1.5em;
         }
+
+        a{
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <section class="livros-section">
         <a href="start.html" class="btn-voltar">← Voltar</a>
         <h1>Livros</h1>
-        <p>Não há conteúdos ainda.<br>
-        Em breve você encontrará aqui materiais e livros digitais para consulta!</p>
+        <a href="projeto.html">Projeto de Leitura autor Ilustrador</a><br>
+        <a class="beta" href="#BETA">Em breve</a>
     </section>
     <div id="fade-overlay"></div>
+    <script src="../script/js/main.js"></script>
     <script>
         // Animação de escurecimento ao clicar no botão voltar
         document.querySelectorAll('.btn-voltar').forEach(el => {
