--- a/src/html/livros.html
+++ b/src/html/livros.html
@@ -45,7 +45,7 @@
         <a href="start.html" class="btn-voltar">← Voltar</a>
         <h1>Livros</h1>
         <a href="projeto.html">Projeto de Leitura autor Ilustrador</a><br>
-        <a class="beta" href="#BETA">Em breve</a>
+        <a class="beta" href="livropersonbullyng.html">Livro dos personagens que sofrem bullyng</a>
     </section>
     <div id="fade-overlay"></div>
     <script src="../script/js/main.js"></script>
