--- a/src/html/livropersonbullyng.html
+++ b/src/html/livropersonbullyng.html
@@ -2909,6 +2909,7 @@
                 
                 <div class="credits">
                     <p>Autora: Laura De Sousa C.</p>
+                    <img src="../data/assets/img/" ></img>
                     <p>Turma: 9°1</p>
                     <p>15/07/2025</p>
                 </div>
@@ -3286,4 +3287,5 @@
     </script>
     
 </body>
+
 </html>
