--- a/src/html/livropersonbullyng.html
+++ b/src/html/livropersonbullyng.html
@@ -2909,7 +2909,7 @@
                 
                 <div class="credits">
                     <p>Autora: Laura De Sousa C.</p>
-                    <img src="../data/assets/img/" ></img>
+                    <img src="../data/assets/img/image copy.png" ></img>
                     <p>Turma: 9°1</p>
                     <p>15/07/2025</p>
                 </div>
@@ -3289,3 +3289,4 @@
 </body>
 
 </html>
+
