--- a/src/html/livropersonbullyng.html
+++ b/src/html/livropersonbullyng.html
@@ -3128,7 +3128,7 @@
                 <div class="credits">
                     <p>Autora: Dorothy Meins</p>
 
-                    <img src="../data/assets/img/Captura de tela 2025-07-29 221629.png" alt="DOROTHY DESENHO">
+                    <img src="../data/assets/img/doty" alt="DOROTHY DESENHO">
                 </div>
 
                 <div class="page-number">104</div>
@@ -3289,5 +3289,6 @@
 </body>
 
 </html>
+
 
 
