--- a/src/html/livropersonbullyng.html
+++ b/src/html/livropersonbullyng.html
@@ -3128,7 +3128,7 @@
                 <div class="credits">
                     <p>Autora: Dorothy Meins</p>
 
-                    <img src="../data/assets/img/doty" alt="DOROTHY DESENHO">
+                    <img src="../data/assets/img/doty.png" alt="DOROTHY DESENHO">
                 </div>
 
                 <div class="page-number">104</div>
@@ -3289,6 +3289,7 @@
 </body>
 
 </html>
+
 
 
 
